fix: overflow: hidden trotz contain: paint als fallback stehen lassen

--- a/sass/_willkommen.sass
+++ b/sass/_willkommen.sass
@@ -5,7 +5,7 @@ section#willkommen
 	justify-content: center
 	background-color: black
 	width: 100%
-	//overflow: hidden
+	overflow: hidden
 	contain: paint
 	padding: 2rem
 	position: relative
