--- a/sass/inhalt/ansprache/_schluss.sass
+++ b/sass/inhalt/ansprache/_schluss.sass
@@ -1,7 +1,7 @@
 #schluss
 	position: relative
 	z-index: 1
-	//overflow: hidden
+	overflow: hidden
 	contain: paint
 	display: flex
 	flex-direction: column
